samples/_failures_safe/1761299478_117de4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8da2883a.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
